--- a/Views/Socio/Index.cshtml
+++ b/Views/Socio/Index.cshtml
@@ -67,10 +67,10 @@
                 @Html.DisplayFor(modelItem => item.Ciudad)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Plan.IdPlan)
+                @Html.DisplayFor(modelItem => item.Plan.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.GrupoFamiliar.IdGrupoFamiliar)
+                @Html.DisplayFor(modelItem => item.GrupoFamiliar.Nombre)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IdSocio">Edit</a> |
