Cambio en vistas

--- a/Views/CartillaMedico/Index.cshtml
+++ b/Views/CartillaMedico/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Médicos en Cartillas</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @*<a asp-action="Create">Create New</a>*@
 </p>
 <table class="table">
     <thead>
@@ -25,15 +25,15 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Cartilla.IdCartilla)
+                @Html.DisplayFor(modelItem => item.Cartilla.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Medico.IdMedico)
+                @Html.DisplayFor(modelItem => item.Medico.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.idCartillaMedico">Edit</a> |
+               @* <a asp-action="Edit" asp-route-id="@item.idCartillaMedico">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.idCartillaMedico">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.idCartillaMedico">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.idCartillaMedico">Delete</a>*@
             </td>
         </tr>
 }
