--- a/Views/Familiar/Details.cshtml
+++ b/Views/Familiar/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
     <h4>Familiar</h4>
@@ -32,11 +32,11 @@
             @Html.DisplayNameFor(model => model.GrupoFamiliar)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GrupoFamiliar.IdGrupoFamiliar)
+            @Html.DisplayFor(model => model.GrupoFamiliar.Nombre)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdFamiliar">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.IdFamiliar">Editar</a> |
+    <a asp-action="Index">Volver a la lista</a>
 </div>
