--- a/Views/GrupoFamiliar/Create.cshtml
+++ b/Views/GrupoFamiliar/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crear</h1>
 
-<h4>GrupoFamiliar</h4>
+<h4>Grupo Familiar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -30,7 +30,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista</a>
 </div>
 
 @section Scripts {
