--- a/Views/GrupoFamiliar/Delete.cshtml
+++ b/Views/GrupoFamiliar/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Borrar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estás seguro que quieres borrar esto?</h3>
 <div>
-    <h4>GrupoFamiliar</h4>
+    <h4>Grupo Familiar</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -28,6 +28,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdGrupoFamiliar" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
