--- a/Views/GrupoFamiliar/Details.cshtml
+++ b/Views/GrupoFamiliar/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
-    <h4>GrupoFamiliar</h4>
+    <h4>Grupo Familiar</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdGrupoFamiliar">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.IdGrupoFamiliar">Editar</a> |
+    <a asp-action="Index">Volver a la lista</a>
 </div>
