--- a/Views/Medico/Index.cshtml
+++ b/Views/Medico/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Médicos</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @* <a asp-action="Create">Create New</a>*@
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Especialidad)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdMedico">Edit</a> |
+               @* <a asp-action="Edit" asp-route-id="@item.IdMedico">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.IdMedico">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdMedico">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.IdMedico">Delete</a>*@
             </td>
         </tr>
 }
