--- a/Views/Plan/Index.cshtml
+++ b/Views/Plan/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Planes</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @*  <a asp-action="Create">Create New</a>*@
 </p>
 <table class="table">
     <thead>
@@ -40,12 +40,12 @@
                 @Html.DisplayFor(modelItem => item.CantFamiliares)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cartilla.IdCartilla)
+                @Html.DisplayFor(modelItem => item.Cartilla.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdPlan">Edit</a> |
+               @* <a asp-action="Edit" asp-route-id="@item.IdPlan">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.IdPlan">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdPlan">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.IdPlan">Delete</a>*@
             </td>
         </tr>
 }
