--- a/Views/Socio/Delete.cshtml
+++ b/Views/Socio/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Borrar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estás seguro que quieres borrar esto?</h3>
 <div>
     <h4>Socio</h4>
     <hr />
@@ -63,13 +63,13 @@
             @Html.DisplayNameFor(model => model.GrupoFamiliar)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GrupoFamiliar.IdGrupoFamiliar)
+            @Html.DisplayFor(model => model.GrupoFamiliar.Nombre)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdSocio" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
