--- a/Views/Socio/Details.cshtml
+++ b/Views/Socio/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
     <h4>Socio</h4>
@@ -56,17 +56,17 @@
             @Html.DisplayNameFor(model => model.Plan)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Plan.IdPlan)
+            @Html.DisplayFor(model => model.Plan.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.GrupoFamiliar)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GrupoFamiliar.IdGrupoFamiliar)
+            @Html.DisplayFor(model => model.GrupoFamiliar.Nombre)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdSocio">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.IdSocio">Editar</a> |
+    <a asp-action="Index">Volver a la lista</a>
 </div>
