--- a/Views/Socio/Index.cshtml
+++ b/Views/Socio/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Socios</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear nuevo Socio</a>
 </p>
 <table class="table">
     <thead>
@@ -73,9 +73,9 @@
                 @Html.DisplayFor(modelItem => item.GrupoFamiliar.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdSocio">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdSocio">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdSocio">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.IdSocio">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.IdSocio">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.IdSocio">Borrar</a>
             </td>
         </tr>
 }
