--- a/Views/TurnoMedico/Delete.cshtml
+++ b/Views/TurnoMedico/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Borrar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estás seguro que quieres borrar esto?</h3>
 <div>
-    <h4>TurnoMedico</h4>
+    <h4>Turno Médico</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -21,19 +21,19 @@
             @Html.DisplayNameFor(model => model.Medico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Medico.IdMedico)
+            @Html.DisplayFor(model => model.Medico.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Socio)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Socio.IdSocio)
+            @Html.DisplayFor(model => model.Socio.Nombre)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="idTurno" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
