--- a/Views/TurnoMedico/Details.cshtml
+++ b/Views/TurnoMedico/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
-    <h4>TurnoMedico</h4>
+    <h4>Turno Médico</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -20,17 +20,17 @@
             @Html.DisplayNameFor(model => model.Medico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Medico.IdMedico)
+            @Html.DisplayFor(model => model.Medico.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Socio)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Socio.IdSocio)
+            @Html.DisplayFor(model => model.Socio.Nombre)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.idTurno">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.idTurno">Editar</a> |
+    <a asp-action="Index">Volver a la lista</a>
 </div>
