--- a/Views/TurnoMedico/Index.cshtml
+++ b/Views/TurnoMedico/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Turnos</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear Turno</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Socio.Dni)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.idTurno">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.idTurno">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.idTurno">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.idTurno">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.idTurno">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.idTurno">Borrar</a>
             </td>
         </tr>
 }
