vista cartilla medico

--- a/Views/CartillaMedico/Index.cshtml
+++ b/Views/CartillaMedico/Index.cshtml
@@ -28,7 +28,8 @@
                 @Html.DisplayFor(modelItem => item.Cartilla.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Medico.Nombre)
+                @Html.DisplayFor(modelItem => item.Medico.Especialidad)
+                @Html.DisplayFor(modelItem => item.Medico.Nombre) 
             </td>
             <td>
                @* <a asp-action="Edit" asp-route-id="@item.idCartillaMedico">Edit</a> |
