--- a/Views/Plan/Details.cshtml
+++ b/Views/Plan/Details.cshtml
@@ -22,12 +22,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Costo)
         </dd>
-        <dt class = "col-sm-2">
+      @*  <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CantFamiliares)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CantFamiliares)
-        </dd>
+        </dd>*@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cartilla)
         </dt>
