--- a/Views/TurnoMedico/Create.cshtml
+++ b/Views/TurnoMedico/Create.cshtml
@@ -19,7 +19,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdSocio" class="control-label"></label>
-                <select asp-for="IdSocio" class="form-control" asp-items="ViewBag.IdSocio"></select>
+                <select asp-for="IdSocio" class="form-control" asp-items="ViewBag.IdSocio">
+                    <option value="0">Elija un Socio</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="IdMedico" class="control-label"></label>
