--- a/Views/CartillaMedico/Index.cshtml
+++ b/Views/CartillaMedico/Index.cshtml
@@ -16,9 +16,11 @@
                 @Html.DisplayNameFor(model => model.Cartilla)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Medico.Especialidad)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Medico)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -29,6 +31,8 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Medico.Especialidad)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Medico.Nombre) 
             </td>
             <td>
