--- a/Views/Socio/Create.cshtml
+++ b/Views/Socio/Create.cshtml
@@ -54,10 +54,10 @@
             <div class="form-group">
                 <label asp-for="IdGrupoFamiliar" class="control-label"></label>
                 <select asp-for="IdGrupoFamiliar" class ="form-control" asp-items="ViewBag.IdGrupoFamiliar">
-                    <option value="0">Crear Nuevo Grupo Familiar</option>
+                    <option value="0" selected>Crear Nuevo Grupo Familiar</option>
                 </select>
             </div>
-            <div class="form-group" id="nuevoGrupoFamiliarDiv" style="display:none;">
+            <div class="form-group" id="nuevoGrupoFamiliarDiv">
                 <label for="nuevoGrupoFamiliarNombre">Nombre del Nuevo Grupo Familiar:</label>
                 <input type="text" id="nuevoGrupoFamiliarNombre" name="nuevoGrupoFamiliarNombre" class="form-control" />
             </div>
