Cambio frontend crear socio

--- a/Views/Socio/Create.cshtml
+++ b/Views/Socio/Create.cshtml
@@ -4,67 +4,70 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Crear</h1>
+<h1 class="text-center mt-5">Crear Socio</h1>
 
-<h4>Socio</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Dni" class="control-label"></label>
-                <input asp-for="Dni" class="form-control" />
-                <span asp-validation-for="Dni" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
-                <span asp-validation-for="Apellido" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Telefono" class="control-label"></label>
-                <input asp-for="Telefono" class="form-control" />
-                <span asp-validation-for="Telefono" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Provincia" class="control-label"></label>
-                <input asp-for="Provincia" class="form-control" />
-                <span asp-validation-for="Provincia" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Ciudad" class="control-label"></label>
-                <input asp-for="Ciudad" class="form-control" />
-                <span asp-validation-for="Ciudad" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdPlan" class="control-label"></label>
-                <select asp-for="IdPlan" class ="form-control" asp-items="ViewBag.IdPlan"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdGrupoFamiliar" class="control-label"></label>
-                <select asp-for="IdGrupoFamiliar" class ="form-control" asp-items="ViewBag.IdGrupoFamiliar">
-                    <option value="0" selected>Crear Nuevo Grupo Familiar</option>
-                </select>
-            </div>
-            <div class="form-group" id="nuevoGrupoFamiliarDiv">
-                <label for="nuevoGrupoFamiliarNombre">Nombre del Nuevo Grupo Familiar:</label>
-                <input type="text" id="nuevoGrupoFamiliarNombre" name="nuevoGrupoFamiliarNombre" class="form-control" />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="container">
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-6">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group mb-3">
+                    <label asp-for="Dni" class="control-label"></label>
+                    <input asp-for="Dni" class="form-control" />
+                    <span asp-validation-for="Dni" class="text-danger"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="Nombre" class="control-label"></label>
+                    <input asp-for="Nombre" class="form-control" />
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="Apellido" class="control-label"></label>
+                    <input asp-for="Apellido" class="form-control" />
+                    <span asp-validation-for="Apellido" class="text-danger"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="Email" class="control-label"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="Telefono" class="control-label"></label>
+                    <input asp-for="Telefono" class="form-control" />
+                    <span asp-validation-for="Telefono" class="text-danger"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="Provincia" class="control-label"></label>
+                    <input asp-for="Provincia" class="form-control" />
+                    <span asp-validation-for="Provincia" class="text-danger"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="Ciudad" class="control-label"></label>
+                    <input asp-for="Ciudad" class="form-control" />
+                    <span asp-validation-for="Ciudad" class="text-danger"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="IdPlan" class="control-label"></label>
+                    <select asp-for="IdPlan" class ="form-control" asp-items="ViewBag.IdPlan"></select>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="IdGrupoFamiliar" class="control-label"></label>
+                    <select asp-for="IdGrupoFamiliar" class ="form-control" asp-items="ViewBag.IdGrupoFamiliar">
+                        <option value="0" selected>Crear Nuevo Grupo Familiar</option>
+                    </select>
+                </div>
+                <div class="form-group mb-3" id="nuevoGrupoFamiliarDiv">
+                    <label for="nuevoGrupoFamiliarNombre">Nombre del Nuevo Grupo Familiar:</label>
+                    <input type="text" id="nuevoGrupoFamiliarNombre" name="nuevoGrupoFamiliarNombre" class="form-control" />
+                </div>
+                <div class="d-flex justify-content-between mt-40">
+                    <!-- Botón a la Derecha -->
+                    <a asp-action="Index" class="btn btn-secondary">Volver a la lista</a>
+                    <input type="submit" value="Create" class="btn btn-primary rounded" />
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 <script>
@@ -73,9 +76,7 @@
         nuevoGrupoFamiliarDiv.style.display = (this.value === '0') ? 'block' : 'none';
     });
 </script>
-<div>
-    <a asp-action="Index">Volver a la lista</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
