Frontend - crear Turno y crear Familiar

--- a/Views/Socio/Create.cshtml
+++ b/Views/Socio/Create.cshtml
@@ -62,9 +62,8 @@
                     <input type="text" id="nuevoGrupoFamiliarNombre" name="nuevoGrupoFamiliarNombre" class="form-control" />
                 </div>
                 <div class="d-flex justify-content-between mt-40">
-                    <!-- Botón a la Derecha -->
                     <a asp-action="Index" class="btn btn-secondary">Volver a la lista</a>
-                    <input type="submit" value="Create" class="btn btn-primary rounded" />
+                    <input type="submit" value="Crear" class="btn btn-primary rounded" />
                 </div>
             </form>
         </div>
