Cambios frontend: Pantalla Principal, Socios, Turnos, Familiares

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,20 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    @*<h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
-    <h1 class="display-4">ORTSocial</h1>
-    <p>Calvo Tobias, Delgado Camila</p>
+<style>
+    /* body {
+        background: rgb(233, 233, 233);
+    } */
+    .vh-80{
+        height: 80vh !important;
+    }
+</style>
+
+<div class="d-flex align-items-center justify-content-center vh-80">
+    <div class="text-center">
+        @*<h1 class="display-4">Welcome</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
+        <h1 class="border-bottom custom-underline mb-3">Obra Social ORT</h1>
+        <p>Calvo Tobias, Delgado Camila</p>
+    </div>
 </div>
