--- a/Views/Familiar/Delete.cshtml
+++ b/Views/Familiar/Delete.cshtml
@@ -4,42 +4,46 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Borrar</h1>
+<h1 class="text-center mt-5">Eliminar Familiar</h1>
 
-<h3>¿Estás seguro que quieres borrar esto?</h3>
 <div>
     <h4>Familiar</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Dni)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Dni)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GrupoFamiliar)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GrupoFamiliar.Nombre)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="IdFamiliar" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Volver a la lista</a>
-    </form>
+    <div class="container">
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-6">
+                <dt class = "">
+                    @Html.DisplayNameFor(model => model.Dni)
+                </dt>
+                <dd class = "">
+                    @Html.DisplayFor(model => model.Dni)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Nombre)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Nombre)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Apellido)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Apellido)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.GrupoFamiliar)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.GrupoFamiliar.Nombre)
+                </dd>
+                <div class="d-flex justify-content-between mt-40">
+                    <form asp-action="Delete">
+                        <input type="hidden" asp-for="IdFamiliar" />
+                        <a asp-action="Index" class="btn btn-secondary">Volver a la lista</a>
+                        <input type="submit" value="Delete" class="btn btn-danger" />
+                    </form>
+                </div>      
+            </div>
+        </div>
+    </div>
 </div>
