--- a/Views/Familiar/Index.cshtml
+++ b/Views/Familiar/Index.cshtml
@@ -4,50 +4,57 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Familiares</h1>
+<div class="d-flex flex-column">
+    <div class="text-center">
+        <h1 class="">Familiares</h1>
+    </div>
+    <div class="text-right mb-3">
+        <a asp-action="Create" class="btn btn-primary">Crear nuevo Familiar</a>
+    </div>
+</div>
 
-<p>
-    <a asp-action="Create">Crear nuevo Familiar</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Dni)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Apellido)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GrupoFamiliar)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Dni)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Apellido)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GrupoFamiliar.Nombre)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.IdFamiliar">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.IdFamiliar">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdFamiliar">Borrar</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+<div class="d-flex align-items-center justify-content-center vh-80">
+    <table class="table text-center">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Dni)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nombre)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Apellido)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.GrupoFamiliar)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Dni)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nombre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Apellido)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.GrupoFamiliar.Nombre)
+                </td>
+                <td>
+                        | <a asp-action="Edit" asp-route-id="@item.IdFamiliar" class="btn btn-warning">Editar</a> |
+                        <a asp-action="Details" asp-route-id="@item.IdFamiliar" class="btn btn-secondary">Detalles</a> |
+                        <a asp-action="Delete" asp-route-id="@item.IdFamiliar" class="btn btn-danger">Borrar</a>
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>
+</div>
