--- a/Views/TurnoMedico/Index.cshtml
+++ b/Views/TurnoMedico/Index.cshtml
@@ -4,44 +4,50 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Turnos</h1>
+<div class="d-flex flex-column">
+    <div class="text-center">
+        <h1 class="">Turnos</h1>
+    </div>
+    <div class="text-right mb-3">
+        <a asp-action="Create" class="btn btn-primary">Crear Turno</a>
+    </div>
+</div>
 
-<p>
-    <a asp-action="Create">Crear Turno</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Fecha)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Medico)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Socio)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fecha)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Medico.Especialidad)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Socio.Dni)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.idTurno">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.idTurno">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.idTurno">Borrar</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="d-flex align-items-center justify-content-center vh-80">
+    <table class="table text-center">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Fecha)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Medico)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Socio)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Fecha)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Medico.Especialidad)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Socio.Dni)
+                </td>
+                <td>
+                        | <a asp-action="Edit" asp-route-id="@item.idTurno" class="btn btn-warning">Editar</a> |
+                        <a asp-action="Details" asp-route-id="@item.idTurno" class="btn btn-secondary">Detalles</a> |
+                        <a asp-action="Delete" asp-route-id="@item.idTurno" class="btn btn-danger">Borrar</a>
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>
+</div>
