--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -3,18 +3,19 @@ html {
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background: rgb(250, 250, 250);
 }
 
 .mt-40 {
