--- a/Views/Socio/Create.cshtml
+++ b/Views/Socio/Create.cshtml
@@ -63,7 +63,7 @@
                 </div>
                 <div class="d-flex justify-content-between mt-40">
                     <a asp-action="Index" class="btn btn-secondary">Volver a la lista</a>
-                    <input type="submit" value="Crear" class="btn btn-primary rounded" />
+                    <input type="submit" value="Crear" class="btn btn-primary" />
                 </div>
             </form>
         </div>
